--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Identity Guardian</title>
+  <title>Safe Harbor Identity Security</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -27,22 +27,41 @@
       font-size: 1.2rem;
       color: #d1d5db;
     }
-    section {
+    .section {
       padding: 2rem 1rem;
-      max-width: 700px;
+      max-width: 900px;
       margin: 0 auto;
     }
-    section h2 {
-      font-size: 1.5rem;
+    .section h2 {
+      font-size: 1.75rem;
       margin-bottom: 1rem;
     }
-    section p {
+    .section p, .section ul, .section ol {
       font-size: 1rem;
       line-height: 1.6;
     }
-    .signup {
-      text-align: center;
-      margin-top: 2rem;
+    .features, .solutions, .faq, .pricing-plans {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+    .feature-box, .pricing-box {
+      background-color: white;
+      border: 1px solid #e5e7eb;
+      border-radius: 0.5rem;
+      padding: 1rem;
+    }
+    .partners {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 1.5rem;
+      margin-top: 1rem;
+      flex-wrap: wrap;
+    }
+    .partners img {
+      max-height: 30px;
+      opacity: 0.6;
     }
     input[type="email"] {
       padding: 0.75rem;
@@ -65,6 +84,13 @@
     button:hover {
       background: #2563eb;
     }
+    .signup-form {
+      margin-top: 1rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
+    }
     footer {
       text-align: center;
       padding: 2rem 1rem;
@@ -75,27 +101,106 @@
 </head>
 <body>
   <header>
-    <h1>Identity Guardian</h1>
+    <h1>Safe Harbor Identity Security</h1>
     <p>Track, clean up, and secure your online accounts — automatically.</p>
   </header>
-  <section>
-    <h2>Your Online Identity Is At Risk</h2>
-    <p>
-      Identity Guardian scans for exposed credentials, reused passwords, and missing two-factor authentication. It helps you identify risky accounts and take action — before attackers do.
-    </p>
-    <p>
-      With a quick scan of your inbox and public breach databases, we’ll help you reclaim control over your digital life.
-    </p>
-    <div class="signup">
-      <h2>Be the first to try it</h2>
-      <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
-        <input type="email" name="email" placeholder="you@example.com" required />
-        <button type="submit">Join the Waitlist</button>
-      </form>
+
+  <div class="section">
+    <h2>Trusted by users who secure accounts across:</h2>
+    <div class="partners">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Twitter-logo.svg" alt="Twitter">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Facebook_Logo.png" alt="Facebook">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Apple-logo.png" alt="Apple">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg" alt="Google">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/3/30/Microsoft_logo_%282012%29.svg" alt="Microsoft">
     </div>
-  </section>
+  </div>
+
+  <div class="section">
+    <h2>Key Benefits</h2>
+    <div class="features">
+      <div class="feature-box">
+        <strong>Ongoing Breach Monitoring:</strong> Get notified the moment your information appears in a new data breach.
+      </div>
+      <div class="feature-box">
+        <strong>Phishing URL and Email Scanner:</strong> Paste a link or email, and we'll flag known or suspected threats instantly.
+      </div>
+      <div class="feature-box">
+        <strong>Security Score & Report:</strong> Receive a clear rating of your identity health and see what to fix.
+      </div>
+      <div class="feature-box">
+        <strong>MFA Audit:</strong> Find out which of your accounts support two-factor authentication and how to turn it on.
+      </div>
+      <div class="feature-box">
+        <strong>Instant Account Discovery:</strong> Learn which services your email is tied to and how exposed they are.
+      </div>
+    </div>
+  </div>
+
+  <div class="section">
+    <h2>Who It's For</h2>
+    <p>Safe Harbor Identity Security protects both high-value targets and everyday users.</p>
+    <ul>
+      <li>✓ Politicians, executives, and military/government employees</li>
+      <li>✓ Influencers, small business owners, and content creators</li>
+      <li>✓ Freelancers and remote workers who manage sensitive accounts</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>How It Works</h2>
+    <ol>
+      <li>1. Enter your email address and run an instant breach check</li>
+      <li>2. Paste suspicious links or messages for a phishing scan</li>
+      <li>3. Receive your identity score and recommended next steps</li>
+      <li>4. Secure your accounts and track improvement over time</li>
+    </ol>
+  </div>
+
+  <div class="section">
+    <h2>Pricing</h2>
+    <div class="pricing-plans">
+      <div class="pricing-box">
+        <h3>Free Plan</h3>
+        <p>✓ One-time security scan<br />✓ Email breach check<br />✓ Access to MFA checklist</p>
+        <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+          <input type="hidden" name="plan" value="Free Plan">
+          <div class="signup-form">
+            <input type="email" name="email" placeholder="Enter your email" required />
+            <button type="submit">Get Started Free</button>
+          </div>
+        </form>
+      </div>
+
+      <div class="pricing-box">
+        <h3>Pro Plan – $8/month</h3>
+        <p>✓ Continuous monitoring<br />✓ Phishing analysis & alerts<br />✓ Ongoing score tracking & tips<br />✓ Priority support</p>
+        <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+          <input type="hidden" name="plan" value="Pro Plan">
+          <div class="signup-form">
+            <input type="email" name="email" placeholder="Enter your email" required />
+            <button type="submit">Subscribe to Pro</button>
+          </div>
+        </form>
+      </div>
+
+      <div class="pricing-box">
+        <h3>Expert Security Audit</h3>
+        <p>A personalized security assessment performed by a certified expert. Great for high-risk individuals and small teams.</p>
+        <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+          <input type="hidden" name="plan" value="Expert Audit">
+          <div class="signup-form">
+            <input type="email" name="email" placeholder="Enter your email" required />
+            <button type="submit">Request More Info</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
   <footer>
-    &copy; 2025 Identity Guardian. Built with care and security in mind.
+    &copy; 2025 Safe Harbor Identity Security. All rights reserved.
   </footer>
 </body>
 </html>
