--- a/index.html
+++ b/index.html
@@ -1,75 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Safe Harbor Identity Security</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <style>
     body {
       font-family: 'Inter', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f7f9fb;
-      color: #1f2937;
+      background-color: #0f172a;
+      color: #f8fafc;
     }
     header {
-      background: #111827;
+      background: linear-gradient(to right, #1e3a8a, #0f172a);
       color: white;
-      padding: 3rem 1rem;
+      padding: 5rem 2rem;
       text-align: center;
     }
     header h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
+      font-size: 3rem;
+      margin-bottom: 1rem;
     }
     header p {
-      font-size: 1.2rem;
-      color: #d1d5db;
+      font-size: 1.25rem;
+      color: #cbd5e1;
     }
     .section {
-      padding: 2rem 1rem;
-      max-width: 900px;
+      padding: 4rem 2rem;
+      max-width: 1000px;
       margin: 0 auto;
     }
     .section h2 {
-      font-size: 1.75rem;
-      margin-bottom: 1rem;
+      font-size: 2rem;
+      margin-bottom: 1.5rem;
+      color: #f1f5f9;
     }
-    .section p, .section ul, .section ol {
-      font-size: 1rem;
-      line-height: 1.6;
-    }
-    .features, .solutions, .faq, .pricing-plans {
+    .features, .pricing-plans {
       display: flex;
-      flex-direction: column;
-      gap: 1rem;
+      flex-wrap: wrap;
+      gap: 1.5rem;
     }
     .feature-box, .pricing-box {
-      background-color: white;
-      border: 1px solid #e5e7eb;
-      border-radius: 0.5rem;
-      padding: 1rem;
+      flex: 1 1 280px;
+      background-color: #1e293b;
+      border: 1px solid #334155;
+      border-radius: 0.75rem;
+      padding: 1.5rem;
+    }
+    .feature-box strong, .pricing-box h3 {
+      color: #60a5fa;
     }
     .partners {
       display: flex;
       justify-content: center;
       align-items: center;
-      gap: 1.5rem;
-      margin-top: 1rem;
+      gap: 2rem;
       flex-wrap: wrap;
+      margin-top: 2rem;
     }
     .partners img {
-      max-height: 30px;
-      opacity: 0.6;
+      height: 32px;
+      filter: grayscale(100%) brightness(80%);
     }
     input[type="email"] {
       padding: 0.75rem;
       font-size: 1rem;
       width: 70%;
       max-width: 300px;
-      border: 1px solid #d1d5db;
-      border-radius: 0.375rem;
+      border: 1px solid #64748b;
+      border-radius: 0.5rem;
+      background-color: #0f172a;
+      color: #f8fafc;
     }
     button {
       background: #3b82f6;
@@ -77,7 +81,7 @@
       padding: 0.75rem 1.25rem;
       font-size: 1rem;
       border: none;
-      border-radius: 0.375rem;
+      border-radius: 0.5rem;
       margin-left: 0.5rem;
       cursor: pointer;
     }
@@ -93,106 +97,74 @@
     }
     footer {
       text-align: center;
-      padding: 2rem 1rem;
+      padding: 3rem 2rem;
       font-size: 0.875rem;
-      color: #6b7280;
+      color: #94a3b8;
     }
   </style>
 </head>
 <body>
-  <header>
+  <header data-aos="fade-up">
     <h1>Safe Harbor Identity Security</h1>
     <p>Track, clean up, and secure your online accounts — automatically.</p>
   </header>
 
-  <div class="section">
+  <div class="section" data-aos="fade-up">
     <h2>Trusted by users who secure accounts across:</h2>
     <div class="partners">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Twitter-logo.svg" alt="Twitter">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Facebook_Logo.png" alt="Facebook">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Apple-logo.png" alt="Apple">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg" alt="Google">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/3/30/Microsoft_logo_%282012%29.svg" alt="Microsoft">
+      <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Gmail">
+      <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="Facebook">
+      <img src="https://cdn-icons-png.flaticon.com/512/1384/1384031.png" alt="Instagram">
+      <img src="https://cdn-icons-png.flaticon.com/512/1384/1384015.png" alt="Twitter">
+      <img src="https://cdn-icons-png.flaticon.com/512/888/888879.png" alt="Microsoft">
+      <img src="https://cdn-icons-png.flaticon.com/512/888/888853.png" alt="Google">
     </div>
   </div>
 
-  <div class="section">
+  <div class="section" data-aos="fade-up">
     <h2>Key Benefits</h2>
     <div class="features">
-      <div class="feature-box">
-        <strong>Ongoing Breach Monitoring:</strong> Get notified the moment your information appears in a new data breach.
-      </div>
-      <div class="feature-box">
-        <strong>Phishing URL and Email Scanner:</strong> Paste a link or email, and we'll flag known or suspected threats instantly.
-      </div>
-      <div class="feature-box">
-        <strong>Security Score & Report:</strong> Receive a clear rating of your identity health and see what to fix.
-      </div>
-      <div class="feature-box">
-        <strong>MFA Audit:</strong> Find out which of your accounts support two-factor authentication and how to turn it on.
-      </div>
-      <div class="feature-box">
-        <strong>Instant Account Discovery:</strong> Learn which services your email is tied to and how exposed they are.
-      </div>
+      <div class="feature-box"><strong>Ongoing Breach Monitoring:</strong> Real-time alerts when your info appears in new data leaks.</div>
+      <div class="feature-box"><strong>Phishing Scanner:</strong> Drop in a suspicious link or message and let AI scan for threats.</div>
+      <div class="feature-box"><strong>Security Score & Report:</strong> Personalized insights to help you strengthen your accounts.</div>
+      <div class="feature-box"><strong>MFA Audit:</strong> Instantly identify where two-factor authentication is missing and fix it.</div>
+      <div class="feature-box"><strong>Account Discovery:</strong> See where your credentials are used and remove what you don’t need.</div>
     </div>
   </div>
 
-  <div class="section">
-    <h2>Who It's For</h2>
-    <p>Safe Harbor Identity Security protects both high-value targets and everyday users.</p>
-    <ul>
-      <li>✓ Politicians, executives, and military/government employees</li>
-      <li>✓ Influencers, small business owners, and content creators</li>
-      <li>✓ Freelancers and remote workers who manage sensitive accounts</li>
-    </ul>
-  </div>
-
-  <div class="section">
-    <h2>How It Works</h2>
-    <ol>
-      <li>1. Enter your email address and run an instant breach check</li>
-      <li>2. Paste suspicious links or messages for a phishing scan</li>
-      <li>3. Receive your identity score and recommended next steps</li>
-      <li>4. Secure your accounts and track improvement over time</li>
-    </ol>
-  </div>
-
-  <div class="section">
+  <div class="section" data-aos="fade-up">
     <h2>Pricing</h2>
     <div class="pricing-plans">
       <div class="pricing-box">
         <h3>Free Plan</h3>
-        <p>✓ One-time security scan<br />✓ Email breach check<br />✓ Access to MFA checklist</p>
+        <p>✓ One-time security scan<br>✓ Email breach check<br>✓ MFA checklist</p>
         <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
           <input type="hidden" name="plan" value="Free Plan">
           <div class="signup-form">
             <input type="email" name="email" placeholder="Enter your email" required />
-            <button type="submit">Get Started Free</button>
+            <button type="submit">Start Free</button>
           </div>
         </form>
       </div>
-
       <div class="pricing-box">
-        <h3>Pro Plan – $8/month</h3>
-        <p>✓ Continuous monitoring<br />✓ Phishing analysis & alerts<br />✓ Ongoing score tracking & tips<br />✓ Priority support</p>
+        <h3>Pro – $8/month</h3>
+        <p>✓ Real-time monitoring<br>✓ Threat alerts<br>✓ Security coaching<br>✓ Priority support</p>
         <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
           <input type="hidden" name="plan" value="Pro Plan">
           <div class="signup-form">
             <input type="email" name="email" placeholder="Enter your email" required />
-            <button type="submit">Subscribe to Pro</button>
+            <button type="submit">Subscribe</button>
           </div>
         </form>
       </div>
-
       <div class="pricing-box">
-        <h3>Expert Security Audit</h3>
-        <p>A personalized security assessment performed by a certified expert. Great for high-risk individuals and small teams.</p>
+        <h3>Expert Audit</h3>
+        <p>✓ Custom review by a certified expert<br>✓ Tailored security strategy<br>✓ Great for VIPs & small teams</p>
         <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
           <input type="hidden" name="plan" value="Expert Audit">
           <div class="signup-form">
             <input type="email" name="email" placeholder="Enter your email" required />
-            <button type="submit">Request More Info</button>
+            <button type="submit">Request Info</button>
           </div>
         </form>
       </div>
@@ -202,5 +174,10 @@
   <footer>
     &copy; 2025 Safe Harbor Identity Security. All rights reserved.
   </footer>
+
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init({ duration: 800, once: true });
+  </script>
 </body>
 </html>
